--- a/301CR/301CR.vcxproj
+++ b/301CR/301CR.vcxproj
@@ -171,6 +171,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Animator.h" />
     <ClInclude Include="ContactListener.h" />
     <ClInclude Include="GameSettings.h" />
     <ClInclude Include="Enums.h" />
@@ -178,10 +179,12 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="GraphicsSystem.h" />
-    <ClInclude Include="TextureSettings.h" />
+    <ClInclude Include="Animation.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="301CR.cpp" />
+    <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="Animator.cpp" />
     <ClCompile Include="ContactListener.cpp" />
     <ClCompile Include="GraphicsSystem.cpp" />
     <ClCompile Include="pch.cpp">
